--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.6",
+        "@react-google-maps/api": "^2.18.1",
+        "@types/googlemaps": "^3.43.3",
         "@types/node": "20.3.2",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
         "@types/styled-components": "^5.1.26",
-        "babel-plugin-styled-components": "^2.1.4",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.7",
         "next": "13.4.7",
