--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@google/markerclusterer": "^2.0.9",
+        "@googlemaps/markerclusterer": "^2.3.1",
+        "@googlemaps/markerclustererplus": "^1.2.10",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.6",
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
+        "@types/markerclustererplus": "^2.1.33",
         "@types/node": "20.3.2",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
@@ -30,5 +34,8 @@
         "react-dom": "18.2.0",
         "styled-components": "^6.0.0-rc.6",
         "typescript": "5.1.3"
+    },
+    "devDependencies": {
+        "@types/google.maps": "^3.53.4"
     }
 }
