--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-toastify": "^9.1.3",
+        "style-loader": "^3.3.3",
         "styled-components": "^6.0.0-rc.6",
         "typescript": "5.1.3"
     },
