--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/node": "20.3.2",
         "@types/react": "18.2.14",
         "@types/react-dom": "18.2.6",
+        "@types/react-slick": "^0.23.10",
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "dotenv": "^16.3.1",
@@ -32,7 +33,9 @@
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-slick": "^0.29.0",
         "react-toastify": "^9.1.3",
+        "slick-carousel": "^1.8.1",
         "style-loader": "^3.3.3",
         "styled-components": "^6.0.0-rc.6",
         "typescript": "5.1.3"
