--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
         "@types/node": "20.3.2",
-        "@types/react": "18.2.14",
+        "@types/react": "^18.2.14",
         "@types/react-dom": "18.2.6",
         "@types/react-slick": "^0.23.10",
         "@types/styled-components": "^5.1.26",
