--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "dotenv": "^16.3.1",
-        "eslint": "8.43.0",
+        "eslint": "^8.43.0",
         "eslint-config-next": "13.4.7",
         "next": "13.4.7",
         "prettier": "^2.8.8",
@@ -38,6 +38,9 @@
         "typescript": "5.1.3"
     },
     "devDependencies": {
-        "@types/google.maps": "^3.53.4"
+        "@types/google.maps": "^3.53.4",
+        "@typescript-eslint/parser": "^5.60.1",
+        "eslint-plugin-next": "^0.0.0",
+        "eslint-plugin-react": "^7.32.2"
     }
 }
