--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "dotenv": "^16.3.1",
         "eslint": "^8.43.0",
-        "eslint-config-next": "13.4.7",
+        "eslint-config-next": "^13.4.7",
         "next": "13.4.7",
         "prettier": "^2.8.8",
         "react": "18.2.0",
@@ -40,7 +40,11 @@
     "devDependencies": {
         "@types/google.maps": "^3.53.4",
         "@typescript-eslint/parser": "^5.60.1",
+        "babel-eslint": "^10.1.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-next": "^0.0.0",
-        "eslint-plugin-react": "^7.32.2"
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0"
     }
 }
