--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "react-toastify": "^9.1.3",
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.0-rc.6",
+        "styled-reset": "^4.5.1",
         "typescript": "5.1.3"
     },
     "devDependencies": {
