--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@googlemaps/markerclusterer": "^2.3.1",
         "@mui/icons-material": "^5.11.16",
         "@mui/material": "^5.13.6",
+        "@prisma/client": "4.16.2",
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
         "@types/node": "20.3.2",
@@ -28,6 +29,7 @@
         "eslint-config-next": "^13.4.7",
         "next": "13.4.7",
         "prettier": "^2.8.8",
+        "prisma": "^4.16.2",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-slick": "^0.29.0",
@@ -35,7 +37,8 @@
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.0-rc.6",
         "styled-reset": "^4.5.1",
-        "typescript": "5.1.3"
+        "typescript": "5.1.3",
+        "vercel": "^31.0.1"
     },
     "devDependencies": {
         "@types/google.maps": "^3.53.4",
