--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.4.7",
         "next": "13.4.7",
+        "next-auth": "^4.22.1",
         "prettier": "^2.8.8",
         "prisma": "^4.16.2",
         "react": "18.2.0",
