feats: token, hashedpassword, modelMarkers

--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
         "@prisma/client": "4.16.2",
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "20.3.2",
         "@types/react": "^18.2.14",
         "@types/react-dom": "18.2.6",
         "@types/react-slick": "^0.23.10",
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.3.1",
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.4.7",
+        "jsonwebtoken": "^9.0.1",
         "next": "13.4.7",
         "next-auth": "^4.22.1",
         "prettier": "^2.8.8",
