--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
@@ -24,18 +20,16 @@
             }
         ],
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         }
     },
     "include": [
         "next-env.d.ts",
         "**/*.ts",
         "**/*.tsx",
-        ".next/types/**/*.ts"
-, "pages/api/auth.ts", "pages/api/auth/NextAuth.js"    ],
-    "exclude": [
-        "node_modules"
-    ]
+        ".next/types/**/*.ts",
+        "pages/api/auth.ts",
+        "pages/api/auth/NextAuth.js"
+    ],
+    "exclude": ["node_modules"]
 }
