--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext"
-        ],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
@@ -24,9 +20,7 @@
             }
         ],
         "paths": {
-            "@/*": [
-                "./src/*"
-            ]
+            "@/*": ["./src/*"]
         }
     },
     "include": [
@@ -35,9 +29,8 @@
         "**/*.tsx",
         ".next/types/**/*.ts",
         "src/app/api/signup.ts",
-        "src/app/api/auth/NextAuth.js"
-, "pages/api/markers/marker.ts"    ],
-    "exclude": [
-        "node_modules"
-    ]
+        "src/app/api/auth/NextAuth.js",
+        "pages/api/markers/marker.ts"
+    ],
+    "exclude": ["node_modules"]
 }
