--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@emotion/styled": "^11.11.0",
         "@googlemaps/markerclusterer": "^2.3.1",
         "@mui/icons-material": "^5.11.16",
+        "@mui/lab": "^5.0.0-alpha.136",
         "@mui/material": "^5.13.6",
         "@prisma/client": "^5.0.0",
         "@react-google-maps/api": "^2.18.1",
