--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
         "jsonwebtoken": "^9.0.1",
         "next": "13.4.7",
         "next-auth": "^4.22.1",
+        "next-connect": "^1.0.0",
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
         "react-toastify": "^9.1.3",
         "slick-carousel": "^1.8.1",
