--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
         "react-toastify": "^9.1.3",
