--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.4.7",
         "jsonwebtoken": "^9.0.1",
+        "libphonenumber-js": "^1.10.38",
         "next": "13.4.7",
         "next-auth": "^4.22.1",
         "next-connect": "^1.0.0",
