--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
         "pages/api/markers/marker.ts",
         "src/app/utils/cloudinary.ts",
         "src/app/utils/formidable.js",
-        "pages/api/upload.js"
-, "webpack.config.js"    ],
+        "pages/api/upload.js",
+        "webpack.config.js"
+    ],
     "exclude": ["node_modules"]
 }
