feat: algas added to markers, developing to autodelete after 1 day

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/googlemaps": "^3.43.3",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "20.3.2",
+        "@types/node-schedule": "^2.1.0",
         "@types/react": "^18.2.14",
         "@types/react-dom": "18.2.6",
         "@types/react-slick": "^0.23.10",
@@ -36,6 +37,7 @@
         "eslint-config-next": "^13.4.7",
         "jsonwebtoken": "^9.0.1",
         "next": "13.4.7",
+        "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
         "react": "18.2.0",
         "react-dom": "18.2.0",
