--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
         "dotenv": "^16.3.1",
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.4.7",
+        "global": "^4.4.0",
         "jsonwebtoken": "^9.0.1",
         "next": "13.4.7",
+        "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
         "react": "18.2.0",
@@ -48,6 +50,7 @@
         "slick-carousel": "^1.8.1",
         "styled-components": "^6.0.0-rc.6",
         "styled-reset": "^4.5.1",
+        "ts-node": "^10.9.1",
         "typescript": "5.1.3",
         "vercel": "^31.0.1"
     },
