--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
+        "puppeteer": "^21.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-responsive": "^9.0.2",
