--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pesca_app_final",
+    "name": "fishgram",
     "license": "MIT",
     "version": "0.1.0",
     "private": true,
@@ -20,7 +20,7 @@
         "@mui/icons-material": "^5.11.16",
         "@mui/lab": "^5.0.0-alpha.136",
         "@mui/material": "^5.13.6",
-        "@prisma/client": "^5.1.1",
+        "@prisma/client": "^5.2.0",
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
         "@types/jsonwebtoken": "^9.0.2",
@@ -67,7 +67,7 @@
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
         "next-translate-plugin": "^2.5.3",
-        "prisma": "^5.1.1"
+        "prisma": "^5.2.0"
     },
     "resolutions": {
         "styled-components": "^5"
