--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
         "src/app/utils/formidable.js",
         "pages/api/upload.js",
         "webpack.config.js",
-        "pages/api/markers/autoDeleteMarkers.ts"
+        "pages/api/markers/autoDeleteMarkers.ts",
     ],
     "exclude": ["node_modules"]
 }
