--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
         "cloudinary": "^1.37.3",
         "dotenv": "^16.3.1",
         "eslint": "^8.43.0",
-        "eslint-config-next": "^13.4.7",
+        "eslint-config-next": "^13.4.19",
         "global": "^4.4.0",
         "jsonwebtoken": "^9.0.1",
-        "next": "13.4.7",
+        "next": "^13.4.19",
         "next-translate": "^2.5.3",
         "next-translate-plugin": "^2.5.3",
         "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
         "puppeteer": "^21.1.1",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
