--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
     "compilerOptions": {
         "target": "es5",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "allowJs": true,
         "skipLibCheck": true,
         "strict": true,
@@ -20,7 +24,9 @@
             }
         ],
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": [
+                "./src/*"
+            ]
         }
     },
     "include": [
@@ -35,7 +41,10 @@
         "src/app/utils/formidable.js",
         "pages/api/upload.js",
         "webpack.config.js",
-        "pages/api/markers/autoDeleteMarkers.ts"
+        "pages/api/markers/autoDeleteMarkers.ts",
+        "i18n.js"
     ],
-    "exclude": ["node_modules"]
+    "exclude": [
+        "node_modules"
+    ]
 }
