--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "puppeteer": "^21.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^13.2.1",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
