--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
         "puppeteer": "^21.1.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-i18next": "^13.2.1",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
@@ -59,9 +58,9 @@
         "vercel": "^31.0.1"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.22.11",
         "@types/google.maps": "^3.53.4",
         "@typescript-eslint/parser": "^5.60.1",
-        "babel-eslint": "^10.1.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-next": "^0.0.0",
