--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "next dev",
         "local": "next build",
-        "build": "prisma generate & next build & node i18n.js",
+        "build": "prisma generate & next build",
         "start": "next start",
         "lint": "next lint",
         "prettier": "prettier --write ."
@@ -40,6 +40,7 @@
         "jsonwebtoken": "^9.0.1",
         "next": "^13.4.7",
         "next-translate": "^2.5.3",
+        "next-translate-plugin": "^2.5.3",
         "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
@@ -66,7 +67,6 @@
         "eslint-plugin-next": "^0.0.0",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "next-translate-plugin": "^2.5.3",
         "prisma": "^5.2.0"
     },
     "resolutions": {
