--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "global": "^4.4.0",
         "jsonwebtoken": "^9.0.1",
         "next": "^13.4.7",
+        "next-intl": "^2.20.0",
         "next-translate": "^2.5.3",
         "next-translate-plugin": "^2.5.3",
         "node-cron": "^3.0.2",
