feat: next-intl implemented. Now we can translate the app

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,8 @@
         "src/app/api/signup.ts",
         "src/app/api/auth/NextAuth.js",
         "pages/api/markers/marker.ts",
-        "src/app/utils/cloudinary.ts",
-        "src/app/utils/formidable.js",
+        "src/utils/cloudinary.ts",
+        "src/utils/formidable.js",
         "pages/api/upload.js",
         "webpack.config.js",
         "pages/api/markers/autoDeleteMarkers.ts",
