--- a/package.json
+++ b/package.json
@@ -24,30 +24,31 @@
         "@react-google-maps/api": "^2.18.1",
         "@types/googlemaps": "^3.43.3",
         "@types/jsonwebtoken": "^9.0.2",
-        "@types/node": "20.3.2",
+        "@types/node": "20.5.7",
         "@types/node-schedule": "^2.1.0",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "18.2.6",
+        "@types/react": "18.2.21",
+        "@types/react-dom": "18.2.7",
         "@types/react-slick": "^0.23.10",
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "bcrypt": "^5.1.0",
         "cloudinary": "^1.37.3",
+        "clsx": "^2.0.0",
         "dotenv": "^16.3.1",
-        "eslint": "^8.43.0",
-        "eslint-config-next": "^13.4.19",
+        "eslint": "8.48.0",
+        "eslint-config-next": "13.4.12",
         "global": "^4.4.0",
         "jsonwebtoken": "^9.0.1",
-        "next": "^13.4.7",
-        "next-intl": "^2.20.0",
+        "next": "^13.4.19",
+        "next-intl": "3.0.0-beta.15",
         "next-translate": "^2.5.3",
         "next-translate-plugin": "^2.5.3",
         "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
         "prettier": "^2.8.8",
         "puppeteer": "^21.1.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
@@ -56,7 +57,7 @@
         "styled-components": "^6.0.0-rc.6",
         "styled-reset": "^4.5.1",
         "ts-node": "^10.9.1",
-        "typescript": "5.1.3",
+        "typescript": "5.2.2",
         "vercel": "^31.0.1"
     },
     "devDependencies": {
