--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint": "8.48.0",
         "eslint-config-next": "13.4.12",
         "global": "^4.4.0",
+        "intro.js": "^7.2.0",
         "jsonwebtoken": "^9.0.1",
         "next": "^13.4.19",
         "next-intl": "3.0.0-beta.15",
@@ -49,6 +50,7 @@
         "puppeteer": "^21.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-intro.js": "^1.0.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
         "react-slick": "^0.29.0",
