--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "dotenv": "^16.3.1",
         "eslint": "8.48.0",
         "eslint-config-next": "13.4.12",
+        "file-loader": "^6.2.0",
         "global": "^4.4.0",
         "intro.js": "^7.2.0",
         "jsonwebtoken": "^9.0.1",
