--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "20.5.7",
         "@types/node-schedule": "^2.1.0",
+        "@types/nodemailer": "^6.4.11",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@types/react-slick": "^0.23.10",
@@ -48,6 +49,7 @@
         "next-translate-plugin": "^2.5.3",
         "node-cron": "^3.0.2",
         "node-schedule": "^2.1.1",
+        "nodemailer": "^6.9.5",
         "prettier": "^2.8.8",
         "puppeteer": "^21.1.1",
         "react": "18.2.0",
