--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "puppeteer": "^21.1.1",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-google-maps": "^9.4.5",
         "react-intro.js": "^1.0.0",
         "react-responsive": "^9.0.2",
         "react-router-dom": "^6.14.2",
